# dynamically-loaded-haskell

./: .gitignore  README.md  hs-interface.cabal
Compiler/: HS.hs
System/: Temporary.hs
cbits/: tmpdir.c
smoke-test/: Main.hs
