name:                hs-interface
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Mikko Juola
maintainer:          mikjuo@gmail.com
category:            System
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Compiler.HS
                       System.Temporary
  c-sources:           cbits/tmpdir.c
  ghc-options:         -threaded -O2 -Wall -fno-warn-name-shadowing
  build-depends:       base >=4.7 && <5.0
                      ,time >=1.4 && <2.0
                      ,text >=1.1 && <2.0
                      ,containers >=0.5 && <1.0
                      ,ghc-paths >=0.1 && <1.0
                      ,ghc ==7.8.*
                      ,unix >=2.7 && <3.0
  default-language:    Haskell2010

test-suite smoke-test
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  hs-source-dirs:      smoke-test
  ghc-options:         -threaded -O2 -rtsopts -Wall -fno-warn-name-shadowing
  build-depends:       base >=4.7 && <5.0
                      ,containers >=0.5 && <1.0
                      ,hs-interface
                      ,text >=1.1 && <2.0
  default-language:    Haskell2010

